<resources>
    <string name="app_name">TT</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fast_quest">FAST QUEST</string>
    <string name="ButtonName">GO</string>
    <string name="card_selection">Card Selection</string>
    <string name="reload">Reload</string>
    <string name="info_detail">색으로 구별 \n\n높은 티어 높은 도전\n\n카드를 선택해서 할일을 찾자</string>
    <string name="accept">확인</string>
    <string name="prove">인증</string>
    <string name="act_pic">활동 사진</string>
    <string name="title">Title</string>
    <string name="detail">Detail</string>
    <string name="map">map</string>
    <string name="info">\?</string>
    <string name="cycle">자전거</string>
    <string name="start_goal">출발지, 목적지</string>
    <string name="ing">진행중</string>
    <string name="profile">profile</string>
    <string name="back">뒤로</string>
    <string name="pre_cat_kor">관심 카테고리 수정</string>
    <string name="profile_kor">개인정보</string>
    <string name="review_chec_kor">작성 리뷰 확인</string>
    <string name="pre_travel_kor">여행/아웃도어</string>
    <string name="pre_book_kor">인문학/책/글</string>
    <string name="pre_meet_kor">사교/인맥</string>
    <string name="pre_language_kor">외국/언어</string>
    <string name="pre_sports_kor">운동/스포츠</string>
    <string name="pre_dance_kor">댄스/무용</string>
    <string name="pre_food_kor">요리/제조</string>
    <string name="pre_camera_kor">사진/영상</string>
    <string name="pre_game_kor">게임/오락</string>
    <string name="pre_movie_kor">문화/공연/축제</string>
    <string name="pre_volunteer_kor">봉사활동</string>
    <string name="pre_music_kor">음악/악기</string>
    <string name="pre_art_kor">공예/만들기</string>
    <string name="null_string">\n\n</string>
    <string name="name_kor">이름</string>
    <string name="age_kor">생년월일</string>
    <string name="gender_kor">성별</string>
    <string name="sample">00</string>
    <string name="save_kor">저장</string>
    <string name="popup_kor">팝업창</string>
    <string name="cancel_kor">취소</string>
    <string name="multi_kor">모임/단체</string>
    <string name="moim_kor">작성된 리뷰</string>
    <string name="fast">F\na\ns</string>
    <string name="quest">s\ne\nu\nQ</string>
    <string name="start_message">Press to Go</string>
    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
    <string name="review">Review</string>
    <string name="multi">multi</string>
    <string name="title_activity_navigation">navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="group">Group</string>
    <string name="review_kor">리뷰 및 평가</string>
    <string name="nickname">닉네임</string>
    <string name="power_off">종료</string>
    <string name="give_up">포기</string>
    <string name="chattiing">채팅 참여</string>
</resources>
