<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".moim">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:background="#ffffff"
        android:orientation="vertical"
        android:gravity="top">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/title"
            android:src="@drawable/pre_language" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Cancel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#2196F3"
                android:text="@string/cancel_kor" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#ffffff" />

            <Button
                android:id="@+id/Ok"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#2196F3"
                android:text="@string/accept" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>