<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efe9cc"
    tools:context=".moim_card_selected">

    <ImageView
        android:id="@+id/NOTaImage2"
        android:layout_width="252dp"
        android:layout_height="116dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="242dp"
        android:contentDescription="@string/app_name"
        android:tint="#F8F8EA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Timepick"
        app:layout_constraintVertical_bias="0.622"
        app:srcCompat="@android:color/background_light" />

    <TextView
        android:id="@+id/Title2"
        android:layout_width="100dp"
        android:layout_height="26dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="60dp"
        android:text="@string/title"
        app:layout_constraintBottom_toBottomOf="@+id/NOTaImage2"
        app:layout_constraintEnd_toEndOf="@+id/NOTaImage2"
        app:layout_constraintStart_toStartOf="@+id/NOTaImage2"
        app:layout_constraintTop_toTopOf="@+id/NOTaImage2" />

    <TextView
        android:id="@+id/Detail2"
        android:layout_width="166dp"
        android:layout_height="43dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:text="@string/detail"
        app:layout_constraintBottom_toBottomOf="@+id/NOTaImage2"
        app:layout_constraintEnd_toEndOf="@+id/NOTaImage2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/NOTaImage2"
        app:layout_constraintTop_toBottomOf="@+id/Title2"
        app:layout_constraintVertical_bias="0.0" />

    <TimePicker
        android:id="@+id/Timepick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFDFD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Reload2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/reload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Start2" />

    <Button
        android:id="@+id/Start2"
        android:layout_width="115dp"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="#f6cd90"
        android:text="@string/prove"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NOTaImage2" />

</androidx.constraintlayout.widget.ConstraintLayout>