<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00314d"
    tools:context=".profile">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginBottom="650dp"
        android:background="#333238"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bar_text"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="632dp"
        android:text="@string/profile"
        android:textColor="#f8f7fa"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="46dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="349dp"
        android:backgroundTint="#333238"
        android:contentDescription="@string/back"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346"
        app:srcCompat="@drawable/arrow_left_thick" />

    <TextView
        android:id="@+id/pre_cat"
        android:layout_width="178dp"
        android:layout_height="29dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="179dp"
        android:layout_marginEnd="187dp"
        android:layout_marginBottom="523dp"
        android:text="@string/pre_cat_kor"
        android:textColor="#f8f7fa"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile"
        android:layout_width="178dp"
        android:layout_height="29dp"
        android:layout_marginStart="45dp"
        android:text="@string/profile_kor"
        android:textColor="#f8f7fa"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/review_chec"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pre_cat" />

    <TextView
        android:id="@+id/review_chec"
        android:layout_width="178dp"
        android:layout_height="29dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="315dp"
        android:layout_marginEnd="187dp"
        android:layout_marginBottom="387dp"
        android:text="@string/review_chec_kor"
        android:textColor="#f8f7fa"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>